fix: 优化容器操作
